--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -5,12 +5,12 @@ xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet>
-		<servlet-name>CMS</servlet-name>
-		<servlet-class>edu.uwm.cs361.CMSServlet</servlet-class>
+		<servlet-name>Login</servlet-name>
+		<servlet-class>edu.uwm.cs361.LoginServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>CMS</servlet-name>
-		<url-pattern>/cms</url-pattern>
+		<servlet-name>Login</servlet-name>
+		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
