--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -8,10 +8,18 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Login</servlet-name>
 		<servlet-class>edu.uwm.cs361.LoginServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>AddUser</servlet-name>
+		<servlet-class>edu.uwm.cs361.AddUserServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AddUser</servlet-name>
+		<url-pattern>/add-user</url-pattern>
+	</servlet-mapping>	
 	<welcome-file-list>
 		<welcome-file>login.html</welcome-file>
 	</welcome-file-list>
