--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -12,6 +12,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>AddUser</servlet-name>
 		<servlet-class>edu.uwm.cs361.AddUserServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>CreateCourse</servlet-name>
+		<servlet-class>edu.uwm.cs361.CreateCourseServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -19,7 +23,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet-mapping>
 		<servlet-name>AddUser</servlet-name>
 		<url-pattern>/add-user</url-pattern>
-	</servlet-mapping>	
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>CreateCourse</servlet-name>
+		<url-pattern>/create-course</url-pattern>
+	</servlet-mapping>		
 	<welcome-file-list>
 		<welcome-file>login.html</welcome-file>
 	</welcome-file-list>
