--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -20,6 +20,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>CreateCourse</servlet-name>
 		<servlet-class>edu.uwm.cs361.CreateCourseServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>Schedule</servlet-name>
+		<servlet-class>edu.uwm.cs361.ScheduleViewServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -35,6 +39,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet-mapping>
 		<servlet-name>CreateCourse</servlet-name>
 		<url-pattern>/create-course</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Schedule</servlet-name>
+		<url-pattern>/scheduleview</url-pattern>
 	</servlet-mapping>		
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
