--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -24,6 +24,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Schedule</servlet-name>
 		<servlet-class>edu.uwm.cs361.ScheduleViewServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>EditInfo</servlet-name>
+		<servlet-class>edu.uwm.cs361.EditInfoServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -43,7 +47,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet-mapping>
 		<servlet-name>Schedule</servlet-name>
 		<url-pattern>/scheduleview</url-pattern>
-	</servlet-mapping>		
+	</servlet-mapping>	
+	<servlet-mapping>
+		<servlet-name>EditInfo</servlet-name>
+		<url-pattern>/edit-info</url-pattern>
+	</servlet-mapping>	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
