--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -48,6 +48,9 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>ViewCourses</servlet-name>
 		<servlet-class>edu.uwm.cs361.ViewCoursesServlet</servlet-class>
 	</servlet>
+	<!-- end servlets -->
+	
+	
 	<servlet-mapping>
 		<servlet-name>AddUser</servlet-name>
 		<url-pattern>/add-user</url-pattern>
