--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,16 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="joda-time-2.5.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jsoup-1.8.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/CMS/war/WEB-INF/lib/jsoup-1.8.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/joda-time-2.5.jar"/>
+	<classpathentry kind="lib" path="appengine-testing.jar"/>
+	<classpathentry kind="lib" path="appengine-api-stubs.jar"/>
+	<classpathentry kind="lib" path="appengine-api.jar"/>
+	<classpathentry kind="lib" path="appengine-api-labs.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
