--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/jsoup-1.8.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jsoup-1.8.1.jar">
+	</classpathentry>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/joda-time-2.5.jar"/>
 	<classpathentry kind="lib" path="appengine-testing.jar"/>
 	<classpathentry kind="lib" path="appengine-api-stubs.jar"/>
 	<classpathentry kind="lib" path="appengine-api-labs.jar"/>
-	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine (1)"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
